--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit
-pandas
-scikit-learn
-numpy
-imblearn
-xgboost
-lightgbm
-catboost
+streamlit==1.28.0
+pandas==2.2.3
+scikit-learn==1.3.2
+numpy==1.26.4
+scipy==1.11.3
+imblearn==0.1
+xgboost==1.7.6
+lightgbm==4.0.0
+catboost==1.2
