--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
-streamlit==1.28.0
-pandas==2.2.3
-scikit-learn>=1.5.0
-imbalanced-learn>=0.12.0
+streamlit
+pandas
+scikit-learn
+numpy
+imblearn
+xgboost
+lightgbm
+catboost
+
+
 
 
