--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,6 @@
-streamlit
-pandas
-scikit-learn
-numpy
-imblearn
-xgboost
-lightgbm
-catboost
-
-
-
-
+streamlit==1.38.0
+pandas==2.2.2
+numpy==1.26.4
+scikit-learn==1.5.0
+altair==5.2.0
+fpdf2==2.7.8
