--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-streamlit==1.38.0
-pandas==2.2.2
-numpy==1.26.4
-scikit-learn==1.5.0
-altair==5.2.0
-fpdf2==2.7.8
+streamlit
+pandas
+numpy
+scikit-learn
 joblib
+matplotlib
+seaborn
+fpdf
+
